# comp-soc

./: Dockerfile.bot  Dockerfile.web  README.md  docker-compose.yaml  manage.py  nginx.conf  pyproject.toml  pytest.ini  run.py  run_bot.py  start-server.sh
.github/workflows/: docs.yaml
carona_parque/: asgi.py  celery.py  urls.py  wsgi.py
carona_parque/bot/: admin.py  apps.py  dispatcher.py  models.py  utils.py
carona_parque/bot/handlers/: default.py
carona_parque/bot/handlers/cars/: handlers.py
carona_parque/bot/handlers/geo/: handlers.py
carona_parque/bot/handlers/onboarding/: handlers.py
carona_parque/bot/handlers/rides/: handlers.py
carona_parque/bot/migrations/: 0001_initial.py  0002_ride_price.py
carona_parque/settings/: base.py  prod.py
scripts/: docs.py
